# RoboticArmControlTerminal

./: README.md  机械臂指令.md
RoboticArmControlTerminal_v3/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc
RoboticArmControlTerminal_v3/FeaturesPage/: about.cpp  about.h  gyroscopepage.cpp  gyroscopepage.h  homepage.cpp  homepage.h  roboticarmpage.cpp  roboticarmpage.h  serialportassistantpage.cpp  serialportassistantpage.h
RoboticArmControlTerminal_v3/Function/: communicationprotocols.cpp  communicationprotocols.h  movesettableview.cpp  movesettableview.h  robotarm.cpp  robotarm.h
RoboticArmControlTerminal_v3/src/include/: ElaIcon.h
RoboticArmControlTerminal_v3/src/private/: ElaLineEditPrivate.cpp
